Fix warnings regarding asciidoctor.